* The S3 bucket prefix is now created as a 'directory object' so its existence
  can be explicitly checked.

* muninn-prepare --dry-run now adds a ';' at the end of each line.

* Command line tools no longer show a progress bar if there is no tty.

* Fixed issue where failing to set/unset a tag did not result in an error.

* Fixed issue with relocating products in an S3 archive when the product
  contained an empty subdirectory.

* Fixed issue where muninn-summary could not group by core.physical_name or
  core.archive_path.

* Fixed issue where archive.retrieve() and archive.export() were returning a
  list if a single properties Struct was given as parameter.

6.0.1 2022-11-17
~~~~~~~~~~~~~~~~

* Fixed python 2 issues and updated documentation that python>=2.7 is required.

6.0 2022-10-28
~~~~~~~~~~~~~~

* Introduced a public python API for muninn.

* muninn-retrieve and muninn-export will now download a product based on the
  core.remote_url setting if core.archive_path was not set (i.e. the product
  was not stored in the archive).
  To disable this and use the old behaviour, make sure to explictly add an
  'is_defined(archive_path)' filter when performing a retrieve/export.

* Introduced storage=none option for archives. This works as a pure catalogue:
  archive_path/archive_date should never be set, attach/strip/pull won't work,
  ingest will set remote_url to a file:// url pointing to the ingested product,
  retrieve and export work purely based on remote_url (see previous point).

* S3 backend 'host' configuration parameter can now be a full endpoint url and
  'port' parameter is now optional.

* S3/Swift storage credentials can now be taken from auth_file credentials
  file and don't have to be included in the archive configuration file itself.

* Added JSON datatype for metadata properties (this uses JSONB storage when
  using the postgresql database backend).

* Added --force and --verify-hash-before options to muninn-attach and added